chore: JSON library -> public key